--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -40,7 +40,7 @@ jobs:
       run: |
         pip3 install --no-cache-dir pybind11
         sudo apt-get update
-        sudo apt-get install -y libjansson-dev
+        sudo apt-get install -y --no-install-recommends libjansson-dev doxygen build-essential
         git clone --recursive https://github.com/vgteam/libbdsg.git
         cd libbdsg
         mkdir build
