--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -40,19 +40,28 @@ jobs:
       run: |
         pip3 install --no-cache-dir pybind11
         sudo apt-get update
-        sudo apt-get install -y --no-install-recommends libjansson-dev doxygen build-essential
+        sudo apt-get install -y --no-install-recommends libjansson-dev doxygen
         git clone --recursive https://github.com/vgteam/libbdsg.git
         cd libbdsg
         mkdir build
         cd build
         cmake ..
-        make -j 4
-        pip install ..
+        make -j 8
+        pip3 install --no-cache-dir bdsg
 
     - name: Run pytest tests
       run: python3 -m pytest
 
 # Run python3 -m pytest
+#   python3 -m pytest
+#   shell: /usr/bin/bash -e {0}
+#   env:
+#     pythonLocation: /opt/hostedtoolcache/Python/3.10.15/x64
+#     PKG_CONFIG_PATH: /opt/hostedtoolcache/Python/3.10.15/x64/lib/pkgconfig
+#     Python_ROOT_DIR: /opt/hostedtoolcache/Python/3.10.15/x64
+#     Python2_ROOT_DIR: /opt/hostedtoolcache/Python/3.10.15/x64
+#     Python3_ROOT_DIR: /opt/hostedtoolcache/Python/3.10.15/x64
+#     LD_LIBRARY_PATH: /opt/hostedtoolcache/Python/3.10.15/x64/lib
 # Traceback (most recent call last):
 #   File "/home/runner/work/STOAT/STOAT/libbdsg/bdsg/deps/pybind11/tests/conftest.py", line 20, in <module>
 #     import pybind11_tests
