--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -36,9 +36,12 @@ jobs:
         pip install plotly==5.24.1
         pip install pytest==8.3.4
 
-    - name: Install libbdsg and pybind11
+    - name: Install pybind11
       run: |
         pip3 install --no-cache-dir pybind11
+
+    - name: Install libbdsg and pybind11
+      run: |
         sudo apt-get update
         sudo apt-get install -y --no-install-recommends libjansson-dev doxygen
         git clone --recursive https://github.com/vgteam/libbdsg.git
