--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -21,6 +21,24 @@ jobs:
       with:
         python-version: '3.10'
 
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y --no-install-recommends \
+        python3 \
+        python3-dev \
+        build-essential \
+        cmake \
+        wget \
+        git \
+        g++ \
+        gcc \
+        make \
+        doxygen \
+        pkg-config \
+        libjansson-dev \
+        sudo rm -rf /var/lib/apt/lists/*
+
     - name: Install requirements dependencies
       run: |
         pip install cyvcf2==0.31.1
@@ -35,22 +53,18 @@ jobs:
         pip install seaborn==0.13.2
         pip install plotly==5.24.1
         pip install pytest==8.3.4
+        pip install pillow==11.1.0
 
-    - name: Install pybind11
+    # Step 8: Install libbdsg
+    - name: Install libbdsg
       run: |
-        pip3 install --no-cache-dir pybind11
-
-    - name: Install libbdsg and pybind11
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y --no-install-recommends libjansson-dev doxygen
         git clone --recursive https://github.com/vgteam/libbdsg.git
-        cd libbdsg
-        mkdir build
-        cd build
+        mkdir libbdsg/build
+        cd libbdsg/build
         cmake ..
-        make -j 8
-        pip3 install --no-cache-dir bdsg
+        make -j 4
+        cd ../..
+        export PYTHONPATH=$PYTHONPATH:/opt/libbdsg/lib
 
     - name: Run pytest tests
       run: python3 -m pytest
