--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -40,7 +40,7 @@ jobs:
       run: |
         pip3 install --no-cache-dir pybind11
 
-    - name: Install libbdsg and pybind11
+    - name: Install libbdsg
       run: |
         sudo apt-get update
         sudo apt-get install -y --no-install-recommends libjansson-dev doxygen
