--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -35,14 +35,14 @@ jobs:
         pip install seaborn==0.13.2
         pip install plotly==5.24.1
         pip install pytest==8.3.4
-        pip3 install --no-cache-dir pybind11
+        pip install pybind11-global
 
     - name: Install libbdsg
       run: |
         sudo apt-get update
         sudo apt-get install -y --no-install-recommends libjansson-dev doxygen
         git clone --recursive https://github.com/vgteam/libbdsg.git
-        pip3 install --no-cache-dir bdsg
+        pip3 install .
 
     - name: Run pytest tests
       run: python3 -m pytest
