--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -35,29 +35,15 @@ jobs:
         pip install seaborn==0.13.2
         pip install plotly==5.24.1
         pip install pytest==8.3.4
-        pip install pybind11-global
+
+    - name: Clean up existing libbdsg directory
+      run: |
+        rm -rf libbdsg
 
     - name: Install libbdsg
       run: |
         git clone --recursive https://github.com/vgteam/libbdsg.git
-        pip install .
+        pip install ./libbdsg
 
     - name: Run pytest tests
       run: python3 -m pytest
-
-# Run python3 -m pytest
-#   python3 -m pytest
-#   shell: /usr/bin/bash -e {0}
-#   env:
-#     pythonLocation: /opt/hostedtoolcache/Python/3.10.15/x64
-#     PKG_CONFIG_PATH: /opt/hostedtoolcache/Python/3.10.15/x64/lib/pkgconfig
-#     Python_ROOT_DIR: /opt/hostedtoolcache/Python/3.10.15/x64
-#     Python2_ROOT_DIR: /opt/hostedtoolcache/Python/3.10.15/x64
-#     Python3_ROOT_DIR: /opt/hostedtoolcache/Python/3.10.15/x64
-#     LD_LIBRARY_PATH: /opt/hostedtoolcache/Python/3.10.15/x64/lib
-# Traceback (most recent call last):
-#   File "/home/runner/work/STOAT/STOAT/libbdsg/bdsg/deps/pybind11/tests/conftest.py", line 20, in <module>
-#     import pybind11_tests
-# ModuleNotFoundError: No module named 'pybind11_tests'
-# Unable to find the test binary "/opt/hostedtoolcache/Python/3.10.15/x64/lib/python3.10/site-packages/pytest/gtest_catch_exceptions_ex_test_". Please make sure to provide
-# a path to the binary via the --build_dir flag or the BUILD_DIR
