--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -42,6 +42,7 @@ jobs:
 
     - name: Install libbdsg
       run: |
+        sudo apt-get install -y --no-install-recommends libjansson-dev doxygen
         git clone --recursive https://github.com/vgteam/libbdsg.git
         pip install ./libbdsg
 
