--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -35,6 +35,7 @@ jobs:
         pip install seaborn==0.13.2
         pip install plotly==5.24.1
         pip install pytest==8.3.4
+        pip3 install pybind11-global 
 
     - name: Clean up existing libbdsg directory
       run: |
