--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -35,12 +35,12 @@ jobs:
         pip install seaborn==0.13.2
         pip install plotly==5.24.1
         pip install pytest==8.3.4
-        pip3 install pybind11-global 
+        pip install pybind11-global 
 
     - name: Clean up existing libbdsg directory
       run: |
         rm -rf libbdsg
-
+ 
     - name: Install libbdsg
       run: |
         sudo apt-get install -y --no-install-recommends libjansson-dev doxygen
