find a problem with plink

--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -1,74 +1,51 @@
-
 name: Python CI
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    env:
-      SKIP_LIBBDSG_INSTALL: "1"
 
     steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v3
-        with:
-          lfs: true
+    - name: Checkout the repository
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
 
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libjansson-dev cmake build-essential tabix
-      
-      - name: Install Python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install cyvcf2==0.31.1
-          pip install numpy==2.0.1
-          pip install pandas==2.2.2
-          pip install statsmodels==0.14.4
-          pip install qmplot==0.3.3
-          pip install scipy==1.14.1
-          pip install setuptools==75.6.0
-          pip install scikit-learn==1.6.0
-          pip install matplotlib==3.9.4
-          pip install seaborn==0.13.2
-          pip install plotly==5.24.1
-          pip install pytest==8.3.4
-          pip install pybind11
-      - name: Clean previous installations
-        run: |
-          sudo rm -rf /usr/local/lib/python*/site-packages/bdsg*
-          sudo rm -rf /usr/local/lib/python*/site-packages/libbdsg*
-          rm -rf libbdsg
-          rm -rf build
-      - name: Install libbdsg
-        run: |
-          git clone --recursive https://github.com/vgteam/libbdsg.git
-          cd libbdsg
-          mkdir build && cd build
-          cmake .. -DPYTHON_EXECUTABLE=$(which python) -DRUN_DOXYGEN=OFF -DBUILD_TESTING=OFF
-          make -j4
-          sudo make install
-          cd ..
-          CFLAGS="-fPIC" pip install .
-          cd ..
-      - name: Verify libbdsg installation
-        run: |
-          python -c "import bdsg; print('libbdsg successfully imported')"
-      - name: Install package in development mode
-        run: |
-          pip install -e .
-      
-      - name: Run pytest tests
-        run: |
-          python3 -m pytest
+    - name: Install requirements dependencies
+      run: |
+        pip install cyvcf2==0.31.1
+        pip install numpy==2.0.1
+        pip install pandas==2.2.2
+        pip install statsmodels==0.14.4
+        pip install qmplot==0.3.3
+        pip install scipy==1.14.1
+        pip install setuptools==75.6.0
+        pip install scikit-learn==1.6.0
+        pip install matplotlib==3.9.4
+        pip install seaborn==0.13.2
+        pip install plotly==5.24.1
+        pip install pytest==8.3.4
+        pip install pybind11-global 
+
+    - name: Clean up existing libbdsg directory
+      run: |
+        rm -rf libbdsg
+ 
+    - name: Install libbdsg
+      run: |
+        sudo apt-get install -y --no-install-recommends libjansson-dev doxygen
+        git clone --recursive https://github.com/vgteam/libbdsg.git
+        pip install ./libbdsg
+
+    - name: Run pytest tests
+      run: python3 -m pytest
