add node filter

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ STOAT.egg-info
 .DS_Store
 htmlcov
 .coverage
+tests/binary_tests_output
+tests/plink_tests_output
+tests/quantitative_tests_output
