--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,4 +9,4 @@ link_directories(/usr/include /usr/local/lib)  # libbdsg.dylib
 add_executable(Snarl src/main.cpp src/list_snarl_paths.cpp)
 
 # Link the bdsg library to your executable target
-target_link_libraries(Snarl bdsg)
+target_link_libraries(Snarl handlegraph bdsg)
