add new version of cxx (list snarl paths improve + add htslib for vcf parsing)

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ vcf_test.normalized.vcf
 data/*
 tests/build/*
 tests/src/CMakeFiles/*
+src/CMakeFiles/*
+src/output/*
+src/cmake_install.cmake
+src/CMakeCache.txt
