--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,17 @@
 cmake_minimum_required(VERSION 3.10)
 
-# Project name and version
-project(stoat_cxx VERSION 1.0 LANGUAGES CXX)
+project(stoat VERSION 0.1.1 LANGUAGES CXX)
 
 # Set C++ standard
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON) 
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${MAKE_BINARY_DIR}/bin") 
 
-# Add compile options (equivalent to CXXFLAGS)
-add_compile_options(-Wall -Wextra -O2)
+# Enable testing
+enable_testing()
+
+include(CTest)
+include(lib/Catch/Catch.cmake)
 
 # Include directories
 include_directories(/usr/include /usr/local/include)
@@ -21,22 +23,11 @@ find_package(Boost)
 # Find HTSlib
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(HTSLIB REQUIRED htslib)
+
 include_directories(${HTSLIB_INCLUDE_DIRS})
 link_directories(${HTSLIB_LIBRARY_DIRS})
-
-# Source files
-set(SRCS 
-    src/matrix.cpp 
-    src/arg_parser.cpp 
-    src/snarl_parser.cpp 
-    src/binary_analysis.cpp 
-    src/quantitative_analysis.cpp 
-    src/list_snarl_paths.cpp
-    src/main.cpp
-)
-
-# Create the executable
-add_executable(${PROJECT_NAME} ${SRCS})
+include_directories ("${PROJECT_SOURCE_DIR}/lib/Catch")
+include_directories(BEFORE SYSTEM "${PROJECT_SOURCE_DIR}")
 
 # Link libraries
 target_link_libraries(${PROJECT_NAME} 
@@ -47,5 +38,7 @@ target_link_libraries(${PROJECT_NAME}
     ${HTSLIB_LIBRARIES}
 )
 
-# Ensure proper linking flags for HTSlib
-target_compile_options(${PROJECT_NAME} PRIVATE ${HTSLIB_CFLAGS_OTHER})
+# Add the source directory
+add_subdirectory(src)
+add_subdirectory(tests/unittest)
+add_subdirectory(tests/fonctionnal)
