--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,19 @@
-project(stoat_src)
+# Find HTSlib
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(HTSLIB REQUIRED htslib)
 
-aux_source_directory(. SOURCES_LIST)
-# static lib are include in the final bin
-add_library(${PROJECT_NAME} STATIC ${SOURCES_LIST})
+include_directories(${HTSLIB_INCLUDE_DIRS})
+link_directories(${HTSLIB_LIBRARY_DIRS})
 
-set(SRC
+target_link_libraries(stoat_exe
+    Boost::boost 
+    bdsg 
+    handlegraph 
+    libsdsl.so.3
+    ${HTSLIB_LIBRARIES}
+)
+
+add_executable(stoat_exe
     main.cpp
     arg_parser.cpp
     binary_analysis.cpp
@@ -12,17 +21,7 @@ set(SRC
     list_snarl_paths.cpp
     matrix.cpp
     quantitative_analysis.cpp
-    snarl_parser.cpp
+    snarl_parser.cpp             
 )
 
-# Create main executable
-add_executable(${PROJECT_NAME} 
-    main.cpp
-    arg_parser.cpp
-    binary_analysis.cpp
-    gaf_creator.cpp
-    list_snarl_paths.cpp
-    matrix.cpp
-    quantitative_analysis.cpp
-    snarl_parser.cpp    
-)
+target_include_directories(stoat_exe PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
