--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ link_directories(${HTSLIB_LIBRARY_DIRS})
 
 # Find Packages
 find_package(Boost REQUIRED)
-find_package(Eigen REQUIRED)
+find_package(Eigen3 REQUIRED)
 
 # Add Executable
 add_executable(${PROJECT_NAME}
@@ -47,7 +47,7 @@ target_link_libraries(${PROJECT_NAME}
     Boost::boost
     bdsg
     handlegraph
-    Eigen
+    Eigen3::Eigen
     libsdsl.so.3
     ${HTSLIB_LIBRARIES}
 )
