--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -160,5 +160,6 @@
     "shared_mutex": "cpp",
     "*.ipp": "cpp"
   },
-  "C_Cpp.errorSquiggles": "disabled"
+  "C_Cpp.errorSquiggles": "disabled",
+  "C_Cpp.default.compilerPath": "/usr/bin/clang++"
 }
