--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,34 +1,43 @@
-name: C++ CI
+name: CI Build and Test STOAT C++
 
 on:
   push:
     branches:
       - main
+      - stoat_cxx
   pull_request:
     branches:
       - main
+      - stoat_cxx
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Install dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y g++ cmake make pkg-config libboost-all-dev \
-            libhts-dev libbdsg-dev libhandlegraph-dev libsdsl-dev
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-    - name: Configure CMake
-      run: cmake -S . -B build -DCMAKE_BUILD_TYPE=Release
-      
-    - name: Build project
-      run: cmake --build build -- -j$(nproc)
+      - name: Build Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          tags: stoat:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-    - name: Run Tests
-      run: |
-        cd build
-        ctest --output-on-failure
+      - name: Run container and compile STOAT
+        run: |
+          docker run --rm --name stoat-container stoat:latest bash -c "
+            cd /STOAT/build && make -j$(nproc)
+          "
+
+      - name: Run unit tests
+        run: |
+          docker run --rm --name stoat-test-container stoat:latest bash -c "
+            cd /STOAT/build && ./unit_tests
+          "
