--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,16 @@ link_directories(${HTSLIB_LIBRARY_DIRS})
 find_package(Boost REQUIRED)
 find_package(Eigen3 REQUIRED)
 
+# Find Python
+find_package(Python3 COMPONENTS Interpreter REQUIRED)
+
+# Ensure dependencies are installed
+add_custom_target(install_python_dependencies ALL
+    COMMAND ${Python3_EXECUTABLE} -m pip install --upgrade pip
+    COMMAND ${Python3_EXECUTABLE} -m pip install pandas matplotlib qmplot
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+)
+
 # Add Executable
 add_executable(${PROJECT_NAME}
     src/main.cpp
@@ -33,6 +43,8 @@ add_executable(${PROJECT_NAME}
     src/snarl_parser.cpp
     ${ALGLIB_SOURCES}
 )
+
+add_dependencies(${PROJECT_NAME} install_python_dependencies)
 
 # Include Directories
 target_include_directories(${PROJECT_NAME} PRIVATE
